--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -56,23 +56,29 @@
                                     <constraint firstItem="16g-Ya-p0C" firstAttribute="leading" secondItem="32I-zm-XDi" secondAttribute="leading" id="VQd-W2-Jcg"/>
                                 </constraints>
                             </view>
-                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalCentering" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="KXf-AU-SZT" userLabel="Button Stack View">
+                            <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="KXf-AU-SZT" userLabel="Button Stack View">
                                 <rect key="frame" x="40" y="578" width="295" height="79"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NdX-3j-BI4" userLabel="Filter Button">
                                         <rect key="frame" x="0.0" y="12" width="59" height="56"/>
-                                        <state key="normal" title="yes"/>
+                                        <state key="normal" title="yes" backgroundImage="MainPageButtonBackground"/>
                                         <connections>
                                             <action selector="approveCard:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XEq-6b-55l"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qHW-wn-jru">
+                                        <rect key="frame" x="64" y="0.0" width="81" height="79"/>
+                                        <state key="normal" backgroundImage="MainPageButtonBackground"/>
+                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ELM-4C-MkM" userLabel="Skip Button">
-                                        <rect key="frame" x="107" y="0.0" width="81" height="79"/>
+                                        <rect key="frame" x="150" y="0.0" width="81" height="79"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="81" id="09h-A4-aYK"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="79" id="JJj-fO-nE6"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="79" id="tW9-gA-9Bi"/>
                                             <constraint firstAttribute="height" constant="79" id="zEg-7j-bgk"/>
                                         </constraints>
-                                        <state key="normal" image="Skip Main Page Button"/>
+                                        <state key="normal" backgroundImage="MainPageButtonBackground"/>
                                         <connections>
                                             <action selector="skipCard:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XQ7-gb-Ksq"/>
                                         </connections>
@@ -83,7 +89,7 @@
                                             <constraint firstAttribute="width" constant="59" id="cBA-xr-68n"/>
                                             <constraint firstAttribute="height" constant="56" id="zij-pG-Ukh"/>
                                         </constraints>
-                                        <state key="normal" image="Profile Main Page Button"/>
+                                        <state key="normal" backgroundImage="MainPageButtonBackground"/>
                                         <connections>
                                             <action selector="segueToProfilePage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IMm-On-so3"/>
                                         </connections>
@@ -92,6 +98,8 @@
                                 <constraints>
                                     <constraint firstItem="NdX-3j-BI4" firstAttribute="width" secondItem="b0O-jA-iWv" secondAttribute="width" id="S1J-YF-oXX"/>
                                     <constraint firstAttribute="height" constant="79" id="SCU-te-wYH"/>
+                                    <constraint firstItem="qHW-wn-jru" firstAttribute="height" secondItem="ELM-4C-MkM" secondAttribute="height" id="qEM-mE-4q8"/>
+                                    <constraint firstItem="qHW-wn-jru" firstAttribute="width" secondItem="ELM-4C-MkM" secondAttribute="width" id="xrD-z5-lY3"/>
                                     <constraint firstItem="NdX-3j-BI4" firstAttribute="height" secondItem="b0O-jA-iWv" secondAttribute="height" id="zhB-WQ-Sgo"/>
                                 </constraints>
                             </stackView>
@@ -492,9 +500,8 @@
         <image name="BackgroundMainPageGradientFullAlpha" width="1468" height="2142"/>
         <image name="Bullet Point" width="8" height="8"/>
         <image name="Chacha Circle Button" width="78" height="78"/>
-        <image name="Profile Main Page Button" width="60" height="59"/>
+        <image name="MainPageButtonBackground" width="3736" height="3640"/>
         <image name="Report User Button" width="5" height="20"/>
-        <image name="Skip Main Page Button" width="81" height="79"/>
         <image name="Top Line" width="375" height="1"/>
     </resources>
 </document>
