--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -57,47 +57,77 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="KXf-AU-SZT" userLabel="Button Stack View">
-                                <rect key="frame" x="40" y="578" width="295" height="79"/>
+                                <rect key="frame" x="40" y="594" width="295" height="59"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NdX-3j-BI4" userLabel="Filter Button">
-                                        <rect key="frame" x="0.0" y="12" width="59" height="56"/>
-                                        <state key="normal" title="yes" backgroundImage="MainPageButtonBackground"/>
-                                        <connections>
-                                            <action selector="approveCard:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XEq-6b-55l"/>
-                                        </connections>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qHW-wn-jru">
-                                        <rect key="frame" x="64" y="0.0" width="81" height="79"/>
-                                        <state key="normal" backgroundImage="MainPageButtonBackground"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ELM-4C-MkM" userLabel="Skip Button">
-                                        <rect key="frame" x="150" y="0.0" width="81" height="79"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="81" id="09h-A4-aYK"/>
-                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="79" id="JJj-fO-nE6"/>
-                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="79" id="tW9-gA-9Bi"/>
-                                            <constraint firstAttribute="height" constant="79" id="zEg-7j-bgk"/>
-                                        </constraints>
-                                        <state key="normal" backgroundImage="MainPageButtonBackground"/>
-                                        <connections>
-                                            <action selector="skipCard:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XQ7-gb-Ksq"/>
-                                        </connections>
-                                    </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b0O-jA-iWv" userLabel="Profile Button">
-                                        <rect key="frame" x="236" y="12" width="59" height="56"/>
+                                        <rect key="frame" x="0.0" y="6" width="47" height="47"/>
                                         <constraints>
+                                            <constraint firstAttribute="height" constant="47" id="73j-xi-hY2"/>
+                                            <constraint firstAttribute="width" constant="47" id="Eo8-Du-w5U"/>
                                             <constraint firstAttribute="width" constant="59" id="cBA-xr-68n"/>
                                             <constraint firstAttribute="height" constant="56" id="zij-pG-Ukh"/>
                                         </constraints>
-                                        <state key="normal" backgroundImage="MainPageButtonBackground"/>
+                                        <inset key="contentEdgeInsets" minX="12" minY="10" maxX="12" maxY="10"/>
+                                        <state key="normal" image="ProfileIcon" backgroundImage="MainPageButtonBackground"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="73j-xi-hY2"/>
+                                                <exclude reference="Eo8-Du-w5U"/>
+                                                <exclude reference="cBA-xr-68n"/>
+                                                <exclude reference="zij-pG-Ukh"/>
+                                            </mask>
+                                        </variation>
                                         <connections>
                                             <action selector="segueToProfilePage:" destination="BYZ-38-t0r" eventType="touchUpInside" id="IMm-On-so3"/>
                                         </connections>
                                     </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ELM-4C-MkM" userLabel="Skip Button">
+                                        <rect key="frame" x="75" y="0.0" width="59" height="59"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="81" id="09h-A4-aYK"/>
+                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="59" id="JJj-fO-nE6"/>
+                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="59" id="tW9-gA-9Bi"/>
+                                            <constraint firstAttribute="height" constant="79" id="zEg-7j-bgk"/>
+                                        </constraints>
+                                        <inset key="contentEdgeInsets" minX="15" minY="10" maxX="15" maxY="10"/>
+                                        <state key="normal" image="RemoveButtonIcon" backgroundImage="MainPageButtonBackground"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="09h-A4-aYK"/>
+                                                <exclude reference="JJj-fO-nE6"/>
+                                                <exclude reference="tW9-gA-9Bi"/>
+                                                <exclude reference="zEg-7j-bgk"/>
+                                            </mask>
+                                        </variation>
+                                        <connections>
+                                            <action selector="skipCard:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XQ7-gb-Ksq"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qHW-wn-jru">
+                                        <rect key="frame" x="162" y="0.0" width="59" height="59"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="59" id="ZO6-Mg-g80"/>
+                                            <constraint firstAttribute="height" constant="59" id="ju2-OL-HGr"/>
+                                        </constraints>
+                                        <inset key="imageEdgeInsets" minX="8" minY="11" maxX="8" maxY="11"/>
+                                        <state key="normal" image="ApproveButtonIcon" backgroundImage="MainPageButtonBackground"/>
+                                        <connections>
+                                            <action selector="approveCard:" destination="BYZ-38-t0r" eventType="touchUpInside" id="X1M-a9-leh"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NdX-3j-BI4" userLabel="Filter Button">
+                                        <rect key="frame" x="248" y="6" width="47" height="47"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="47" id="UZL-ax-L0b"/>
+                                            <constraint firstAttribute="width" constant="47" id="XAw-eu-h8r"/>
+                                        </constraints>
+                                        <inset key="contentEdgeInsets" minX="7" minY="10" maxX="6.6699999999999999" maxY="9"/>
+                                        <state key="normal" title="yes" image="MessagingIcon" backgroundImage="MainPageButtonBackground"/>
+                                    </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="NdX-3j-BI4" firstAttribute="width" secondItem="b0O-jA-iWv" secondAttribute="width" id="S1J-YF-oXX"/>
-                                    <constraint firstAttribute="height" constant="79" id="SCU-te-wYH"/>
+                                    <constraint firstAttribute="height" constant="59" id="SCU-te-wYH"/>
                                     <constraint firstItem="qHW-wn-jru" firstAttribute="height" secondItem="ELM-4C-MkM" secondAttribute="height" id="qEM-mE-4q8"/>
                                     <constraint firstItem="qHW-wn-jru" firstAttribute="width" secondItem="ELM-4C-MkM" secondAttribute="width" id="xrD-z5-lY3"/>
                                     <constraint firstItem="NdX-3j-BI4" firstAttribute="height" secondItem="b0O-jA-iWv" secondAttribute="height" id="zhB-WQ-Sgo"/>
@@ -114,7 +144,7 @@
                             <constraint firstItem="32I-zm-XDi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="JuR-HK-vJm"/>
                             <constraint firstItem="Puu-d4-KAF" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="NYA-3H-zkS"/>
                             <constraint firstItem="dsh-Hh-R5l" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="OkH-82-grN"/>
-                            <constraint firstItem="KXf-AU-SZT" firstAttribute="bottom" secondItem="dsh-Hh-R5l" secondAttribute="bottom" constant="-10" id="RNX-a5-g4P"/>
+                            <constraint firstItem="KXf-AU-SZT" firstAttribute="bottom" secondItem="dsh-Hh-R5l" secondAttribute="bottom" constant="-14" id="RNX-a5-g4P"/>
                             <constraint firstAttribute="trailing" secondItem="dsh-Hh-R5l" secondAttribute="trailing" id="WbO-ri-jsH"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Puu-d4-KAF" secondAttribute="bottom" id="aVe-Kb-l6y"/>
                             <constraint firstItem="KXf-AU-SZT" firstAttribute="leading" secondItem="dsh-Hh-R5l" secondAttribute="leading" constant="40" id="p6w-3g-Fkt"/>
@@ -127,10 +157,13 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="kolodaView" destination="32I-zm-XDi" id="QB3-Nj-tjg"/>
+                        <outlet property="theApproveButton" destination="qHW-wn-jru" id="IMq-4O-CMW"/>
                         <outlet property="theBackgroundColorView" destination="dsh-Hh-R5l" id="HgS-Re-cUg"/>
                         <outlet property="theChachaLoadingImage" destination="Uj8-Kh-nVl" id="ds1-7D-AOs"/>
-                        <outlet property="theFilteringButton" destination="NdX-3j-BI4" id="W3r-l0-4cf"/>
                         <outlet property="theMagicMovePlaceholderImage" destination="16g-Ya-p0C" id="MjF-Mq-LDl"/>
+                        <outlet property="theMessageButton" destination="NdX-3j-BI4" id="aLa-NA-Zb9"/>
+                        <outlet property="theProfileButton" destination="b0O-jA-iWv" id="8Eo-eo-YRk"/>
+                        <outlet property="theSkipButton" destination="ELM-4C-MkM" id="AJ6-Jq-9RP"/>
                         <segue destination="daK-C5-wmi" kind="show" identifier="BackgroundAnimationControllerToTagFilteringPageSegue" id="2hX-Ts-O6M"/>
                         <segue destination="fEb-nV-m3f" kind="presentation" identifier="OnboardingPageSegue" id="BBN-rh-MvJ"/>
                     </connections>
@@ -497,10 +530,14 @@
         </scene>
     </scenes>
     <resources>
+        <image name="ApproveButtonIcon" width="925" height="792"/>
         <image name="BackgroundMainPageGradientFullAlpha" width="1468" height="2142"/>
         <image name="Bullet Point" width="8" height="8"/>
         <image name="Chacha Circle Button" width="78" height="78"/>
         <image name="MainPageButtonBackground" width="3736" height="3640"/>
+        <image name="MessagingIcon" width="1043" height="877"/>
+        <image name="ProfileIcon" width="560" height="686"/>
+        <image name="RemoveButtonIcon" width="455" height="593"/>
         <image name="Report User Button" width="5" height="20"/>
         <image name="Top Line" width="375" height="1"/>
     </resources>
