--- a/ChachaT/Base.lproj/Main.storyboard
+++ b/ChachaT/Base.lproj/Main.storyboard
@@ -31,7 +31,7 @@
                                     <imageView userInteractionEnabled="NO" alpha="0.45000000000000001" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BackgroundMainPageGradient" translatesAutoresizingMaskIntoConstraints="NO" id="uN5-uW-dFI">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                     </imageView>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Chacha Circle Button" translatesAutoresizingMaskIntoConstraints="NO" id="Uj8-Kh-nVl">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ChachaLoadingButton" translatesAutoresizingMaskIntoConstraints="NO" id="Uj8-Kh-nVl">
                                         <rect key="frame" x="148" y="295" width="78" height="78"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="78" id="Qim-2a-oEF"/>
@@ -65,18 +65,17 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="KXf-AU-SZT" userLabel="Button Stack View">
-                                <rect key="frame" x="20" y="594" width="335" height="59"/>
+                                <rect key="frame" x="33" y="572" width="310" height="90"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b0O-jA-iWv" userLabel="Profile Button">
-                                        <rect key="frame" x="0.0" y="6" width="47" height="47"/>
+                                        <rect key="frame" x="0.0" y="12" width="65" height="65"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="47" id="73j-xi-hY2"/>
                                             <constraint firstAttribute="width" constant="47" id="Eo8-Du-w5U"/>
                                             <constraint firstAttribute="width" constant="59" id="cBA-xr-68n"/>
                                             <constraint firstAttribute="height" constant="56" id="zij-pG-Ukh"/>
                                         </constraints>
-                                        <inset key="contentEdgeInsets" minX="12" minY="10" maxX="12" maxY="10"/>
-                                        <state key="normal" image="ProfileIcon" backgroundImage="MainPageButtonBackground"/>
+                                        <state key="normal" image="Profile Button"/>
                                         <variation key="default">
                                             <mask key="constraints">
                                                 <exclude reference="73j-xi-hY2"/>
@@ -90,15 +89,16 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ELM-4C-MkM" userLabel="Skip Button">
-                                        <rect key="frame" x="88" y="0.0" width="59" height="59"/>
+                                        <rect key="frame" x="65" y="0.0" width="90" height="90"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="81" id="09h-A4-aYK"/>
+                                            <constraint firstAttribute="height" constant="90" id="FEl-lt-Dfe"/>
                                             <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="59" id="JJj-fO-nE6"/>
+                                            <constraint firstAttribute="width" constant="90" id="iLT-6i-PoO"/>
                                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="59" id="tW9-gA-9Bi"/>
                                             <constraint firstAttribute="height" constant="79" id="zEg-7j-bgk"/>
                                         </constraints>
-                                        <inset key="contentEdgeInsets" minX="15" minY="10" maxX="15" maxY="10"/>
-                                        <state key="normal" image="RemoveButtonIcon" backgroundImage="MainPageButtonBackground"/>
+                                        <state key="normal" image="Skip Button"/>
                                         <variation key="default">
                                             <mask key="constraints">
                                                 <exclude reference="09h-A4-aYK"/>
@@ -112,30 +112,33 @@
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qHW-wn-jru">
-                                        <rect key="frame" x="188" y="0.0" width="59" height="59"/>
+                                        <rect key="frame" x="155" y="0.0" width="90" height="90"/>
                                         <constraints>
                                             <constraint firstAttribute="width" constant="59" id="ZO6-Mg-g80"/>
                                             <constraint firstAttribute="height" constant="59" id="ju2-OL-HGr"/>
                                         </constraints>
-                                        <inset key="imageEdgeInsets" minX="8" minY="11" maxX="8" maxY="11"/>
-                                        <state key="normal" image="ApproveButtonIcon" backgroundImage="MainPageButtonBackground"/>
+                                        <state key="normal" image="Approve Button"/>
+                                        <variation key="default">
+                                            <mask key="constraints">
+                                                <exclude reference="ZO6-Mg-g80"/>
+                                                <exclude reference="ju2-OL-HGr"/>
+                                            </mask>
+                                        </variation>
                                         <connections>
                                             <action selector="approveCard:" destination="BYZ-38-t0r" eventType="touchUpInside" id="X1M-a9-leh"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NdX-3j-BI4" userLabel="Filter Button">
-                                        <rect key="frame" x="288" y="6" width="47" height="47"/>
+                                        <rect key="frame" x="245" y="12" width="65" height="65"/>
                                         <constraints>
-                                            <constraint firstAttribute="height" constant="47" id="UZL-ax-L0b"/>
-                                            <constraint firstAttribute="width" constant="47" id="XAw-eu-h8r"/>
+                                            <constraint firstAttribute="height" constant="65" id="UZL-ax-L0b"/>
+                                            <constraint firstAttribute="width" constant="65" id="XAw-eu-h8r"/>
                                         </constraints>
-                                        <inset key="contentEdgeInsets" minX="7" minY="10" maxX="6.6699999999999999" maxY="9"/>
-                                        <state key="normal" title="yes" image="MessagingIcon" backgroundImage="MainPageButtonBackground"/>
+                                        <state key="normal" image="Messaging Button"/>
                                     </button>
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="NdX-3j-BI4" firstAttribute="width" secondItem="b0O-jA-iWv" secondAttribute="width" id="S1J-YF-oXX"/>
-                                    <constraint firstAttribute="height" constant="59" id="SCU-te-wYH"/>
                                     <constraint firstItem="qHW-wn-jru" firstAttribute="height" secondItem="ELM-4C-MkM" secondAttribute="height" id="qEM-mE-4q8"/>
                                     <constraint firstItem="qHW-wn-jru" firstAttribute="width" secondItem="ELM-4C-MkM" secondAttribute="width" id="xrD-z5-lY3"/>
                                     <constraint firstItem="NdX-3j-BI4" firstAttribute="height" secondItem="b0O-jA-iWv" secondAttribute="height" id="zhB-WQ-Sgo"/>
@@ -151,11 +154,16 @@
                             <constraint firstItem="32I-zm-XDi" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="J1a-RW-927"/>
                             <constraint firstItem="32I-zm-XDi" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="JuR-HK-vJm"/>
                             <constraint firstItem="dsh-Hh-R5l" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="WzL-Dr-pF6"/>
-                            <constraint firstAttribute="trailing" secondItem="KXf-AU-SZT" secondAttribute="trailing" constant="20" id="dt6-wJ-gS9"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="dsh-Hh-R5l" secondAttribute="bottom" id="hz3-7g-Zfr"/>
-                            <constraint firstItem="KXf-AU-SZT" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="20" id="mox-SF-ess"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="KXf-AU-SZT" secondAttribute="bottom" constant="14" id="yBv-Xz-ntc"/>
+                            <constraint firstItem="KXf-AU-SZT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="k3R-LS-UPU"/>
+                            <constraint firstItem="KXf-AU-SZT" firstAttribute="leading" relation="lessThanOrEqual" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="30" id="mox-SF-ess"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="KXf-AU-SZT" secondAttribute="bottom" constant="5" id="yBv-Xz-ntc"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="mox-SF-ess"/>
+                            </mask>
+                        </variation>
                     </view>
                     <navigationItem key="navigationItem" id="YI6-Zh-KAq"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
@@ -163,6 +171,7 @@
                         <outlet property="kolodaView" destination="32I-zm-XDi" id="QB3-Nj-tjg"/>
                         <outlet property="theApproveButton" destination="qHW-wn-jru" id="IMq-4O-CMW"/>
                         <outlet property="theBackgroundColorView" destination="dsh-Hh-R5l" id="HgS-Re-cUg"/>
+                        <outlet property="theBackgroundGradient" destination="uN5-uW-dFI" id="Wg7-Jw-Mw5"/>
                         <outlet property="theChachaLoadingImage" destination="Uj8-Kh-nVl" id="ds1-7D-AOs"/>
                         <outlet property="theMagicMovePlaceholderImage" destination="16g-Ya-p0C" id="MjF-Mq-LDl"/>
                         <outlet property="theMessageButton" destination="NdX-3j-BI4" id="aLa-NA-Zb9"/>
@@ -534,15 +543,14 @@
         </scene>
     </scenes>
     <resources>
-        <image name="ApproveButtonIcon" width="44" height="37"/>
+        <image name="Approve Button" width="81" height="81"/>
         <image name="BackgroundMainPageGradient" width="414" height="736"/>
         <image name="Bullet Point" width="8" height="8"/>
-        <image name="Chacha Circle Button" width="78" height="78"/>
-        <image name="MainPageButtonBackground" width="3736" height="3640"/>
-        <image name="MessagingIcon" width="1043" height="877"/>
-        <image name="ProfileIcon" width="22" height="28"/>
-        <image name="RemoveButtonIcon" width="455" height="593"/>
+        <image name="ChachaLoadingButton" width="78" height="78"/>
+        <image name="Messaging Button" width="63" height="63"/>
+        <image name="Profile Button" width="63" height="63"/>
         <image name="Report User Button" width="5" height="20"/>
+        <image name="Skip Button" width="81" height="81"/>
         <image name="Top Line" width="375" height="1"/>
     </resources>
 </document>
